devsecops-k8s-org-guardrails/policies/kyverno/restrict-privilege.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged
spec:
  rules:
  - name: block-privileged
    match:
      resources:
        kinds: ["Pod"]
    validate:
      message: "Privileged containers are not allowed"
      pattern:
        spec:
          containers:
          - securityContext:
              privileged: false
